--- a/css/login.css
+++ b/css/login.css
@@ -56,6 +56,7 @@ form div h3{
 }
 
 form div input{
+    color:black;
     justify-content: center;
     text-align: center;
     border-radius: 5px;
