--- a/css/header.css
+++ b/css/header.css
@@ -37,7 +37,7 @@
 }
 
 #header-container #menuOptions li a{
-    color: #3d3d3d;
+    color: white;
     text-decoration: none;
 }
 
@@ -53,5 +53,6 @@
 }
 
 #header-container #user-container p{
+    color: white;
     font-size: 1.5em;
 }
