--- a/css/header.css
+++ b/css/header.css
@@ -55,4 +55,18 @@
 #header-container #user-container p{
     color: white;
     font-size: 1.5em;
+    margin-right: 10%;
+}
+
+#header-container #user-container #cerrarSesion{
+    height: 100%;
+    display: flex;
+    align-items: end;
+    margin-bottom: 5%;
+}
+
+#header-container #user-container #cerrarSesion button{
+    font-size: 60%;
+    display: flex;
+    justify-content: end;
 }
