--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,21 @@ article{
     grid-template-columns: 50% 50%;
 }
 
+.container .user-container{
+    margin: 2%;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+}
+
+.container .user-container .user{
+    background-color: #58AFB8;
+    margin-bottom: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding: 2%;
+    color: white;
+}
+
 .container .exam-container .exam{
     color: white;
     margin-left: 3%;
