--- a/css/main.css
+++ b/css/main.css
@@ -45,13 +45,17 @@ article{
 .container .user-container{
     margin: 2%;
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 50% 50%;
 }
 
 .container .user-container .user-pendiente{
     display: grid;
-    grid-template-columns: 20% 40% 40%;
+    grid-template-columns: 33% 33% 33%;
     align-items: center;
+}
+
+.container .user-container .user-pendiente .user-title{
+    text-align: center;
 }
 
 .container .user-container .user-pendiente div{
