--- a/css/main.css
+++ b/css/main.css
@@ -111,3 +111,31 @@ article{
     border: 0px;
     border-radius: 30px;
 }
+
+.container .generar-container{
+    display: flex;
+    justify-content: center;
+    padding-top: 2%;
+}
+
+.container .generar-container div{
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 1.3em;
+    margin-left: 5%;
+    margin-right: 2%;
+}
+
+.container .generar-container div label{
+    margin-right: 10%;
+}
+
+.container .generar-container div button{
+    border: 1px solid white;
+    font-size: 0.9em;
+    padding: 5%;
+    background-color: #58AFB8;
+    border-radius: 5px;
+    color: white;
+}
