--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ article{
     border-radius: 30px;
 }
 
-.container .generar-container{
+.container .generar-container,.asignar-container{
     display: flex;
     justify-content: center;
     padding-top: 2%;
@@ -123,15 +123,37 @@ article{
     align-items: center;
     color: white;
     font-size: 1.3em;
-    margin-left: 5%;
-    margin-right: 2%;
+    margin-left: 3%;
+    margin-right: 1%;
+}
+
+.container .asignar-container div{
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 1.3em;
+    margin-left: 3%;
+    margin-right: 1%;
 }
 
 .container .generar-container div label{
     margin-right: 10%;
 }
 
+.container .asignar-container div label{
+    margin-right: 10%;
+}
+
 .container .generar-container div button{
+    border: 1px solid white;
+    font-size: 0.9em;
+    padding: 5%;
+    background-color: #58AFB8;
+    border-radius: 5px;
+    color: white;
+}
+
+.container .asignar-container div button{
     border: 1px solid white;
     font-size: 0.9em;
     padding: 5%;
