--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,52 @@ article{
     grid-template-columns: 50% 50%;
 }
 
+.container .exam-container .examen{
+    background-color: #58AFB8;
+    margin: 1%;
+    border: 1px solid white;
+    color: white;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 25% 25%;
+}
+
+
+
+.container .exam-container .examen div{
+    margin: 1%;
+    
+    text-align: center;
+}
+
+.container .exam-container .examen .examen-title{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: 1.4em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid white;
+}
+
+.container .exam-container .examen .borrarExamen-container{
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 2;
+}
+
+.container .exam-container .examen .borrarExamen-container button{
+    padding: 4%;
+    color: white;
+    background-color: #58AFB8;
+    border-radius: 5px;
+    border: 1px solid white;
+}
+
 .container .user-container{
     margin: 2%;
     display: grid;
