--- a/css/main.css
+++ b/css/main.css
@@ -319,3 +319,34 @@ article{
     color: white;
     border-radius: 5px;
 }
+
+.container .intentos-container{
+    margin: 1%;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    
+}
+
+.container .intentos-container .intento{
+    color: white;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    padding: 3%;
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-row: auto auto;
+    background-color: #58AFB8;
+    border-radius: 5px;
+    border: 1px solid white;
+}
+
+.container .intentos-container .intento div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container .intentos-container .intento .intento-title{
+    justify-content: left;
+}
